src/objects/Transaction_Items__c.object
<CustomObject>
    <description>FIT Project</description>
    <fields>
        <fullName>Added_via_Scan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defaults to TRUE if the Transaction Item was scanned via barcode scanner vs manually added</description>
        <label>Added via Scan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <description>Value returned via the web service call to SAP</description>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Number__c</fullName>
        <description>Value returned via the web service call to SAP</description>
        <label>Error #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Severity__c</fullName>
        <description>Value returned via the web service call to SAP</description>
        <label>Error Severity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Model__c</fullName>
        <description>Used within the Product Details for FIT mobile</description>
        <formula>Inventory__r.Model_Number__c</formula>
        <label>Inventory Model #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory #</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Transaction Items</relationshipLabel>
        <relationshipName>Transaction_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>Value sent to SAP via the web service call to distinguish each Transaction Item</description>
        <label>Line #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Description_Inventory__c</fullName>
        <description>Defaults to the Model Description field from the Product table via workflow. Used to ensure the value will not be deleted if associated Inventory item is deleted.</description>
        <label>Model Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Description_Product__c</fullName>
        <description>Defaults to the Model Description field from the Product table</description>
        <formula>Model_Number__r.Product_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Model #</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_FIM__c.Material_Type__c</field>
                <operation>equals</operation>
                <value>ZMOD</value>
            </filterItems>
            <filterItems>
                <field>Product_FIM__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>Y</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_FIM__c</referenceTo>
        <relationshipLabel>Transaction Items</relationshipLabel>
        <relationshipName>Transaction_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Defaults to the Model # field from the Products table via workflow. Used to ensure the value will not be deleted if associated Inventory item is deleted.</description>
        <label>Model #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Location_Name__c</fullName>
        <description>Defaults to the Location Name field from the Inventory table via workflow. Used to ensure the value will not be deleted if associated Inventory item is deleted.</description>
        <label>Original Location Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Location__c</fullName>
        <description>Defaults to the Location # field from the Inventory table via workflow. Used to ensure the value will not be deleted if associated Inventory item is deleted.</description>
        <label>Original Location #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH1_Description__c</fullName>
        <description>Defaults to the PH1 Description field from the Product table</description>
        <formula>Model_Number__r.PH1_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PH1 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH2_Description__c</fullName>
        <description>Defaults to the PH2 Description field from the Product table</description>
        <formula>Model_Number__r.PH2_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PH2 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH3_Description__c</fullName>
        <description>Defaults to the PH3 Description field from the Product table</description>
        <formula>Model_Number__r.PH3_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PH3 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <description>Defaults to the lowest of the List Price, Group Price and Contract Price fields from the Customer Pricing table</description>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Defaults to the lowest of the List Price, Group Price and Contract Price fields from the Customer Pricing table</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Processed_Date__c</fullName>
        <description>Defaults to the date when the Consignment Request or Inventory Transfer web service acknowledgement was received</description>
        <label>Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>Used within the Product Details for FIT mobile</description>
        <formula>Model_Number__r.Product_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Model__c</fullName>
        <description>Used within the Product Details for FIT mobile</description>
        <formula>Model_Number__r.Name</formula>
        <label>Product Model #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Price__c</fullName>
        <description>Defaults to the Special Pricing field value if the Special Pricing field is not null. Else, defaults to the Price field value.</description>
        <formula>IF(  Special_Pricing__c  &gt; 0, Special_Pricing__c,  Price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roll-Up Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <description>Defaults to the Serial # field from the Inventory table via workflow. Used to ensure the value will not be deleted if associated Inventory item is deleted.</description>
        <label>Serial #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Pricing__c</fullName>
        <label>Special Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <referenceTo>Transactions__c</referenceTo>
        <relationshipLabel>Transaction Items</relationshipLabel>
        <relationshipName>Transaction_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>Defaults to the Unit of Measure field from the Product table</description>
        <formula>Model_Number__r.Unit_of_Measure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit of Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_By_Date__c</fullName>
        <description>Defaults to the Use By Date field from the Inventory table via workflow. Used to ensure the value will not be deleted if associated Inventory item is deleted.</description>
        <label>Use By Date</label>
        <type>Date</type>
    </fields>
    <label>Transaction Item</label>
    <nameField>
        <displayFormat>TI-{00000}</displayFormat>
        <label>Transaction Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Items</pluralLabel>
    <recordTypes>
        <fullName>Consignment_Request</fullName>
        <active>true</active>
        <label>Consignment Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consignment_Request_Read_Only</fullName>
        <active>true</active>
        <description>Record Type for Consignment Requests with a Status of Send or Received or Transaction Items with a Status of Pending or Success</description>
        <label>Consignment Request - Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inventory_Transfer</fullName>
        <active>true</active>
        <label>Inventory Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inventory_Transfer_Read_Only</fullName>
        <active>true</active>
        <description>Record Type for Inventory Transfers with a Status of Send or Received or Transaction Items with a Status of Pending or Success</description>
        <label>Inventory Transfer - Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Order</fullName>
        <active>true</active>
        <label>Sales Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Order_Read_Only</fullName>
        <active>true</active>
        <description>Record Type for Sales Orders with a Status of PO Pending or Invoiced</description>
        <label>Sales Order - Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>